# agent-browser-stealth

./: .gitignore  CHANGELOG.md  README.md  README.zh.md  install.sh  package.json
.github/workflows/: ci.yml  clawhub-sync.yml  release-binaries.yml  release.yml
.husky/: pre-push
cli/: Cargo.toml
cli/src/: commands.rs  connect.rs  connection.rs  findurl.rs  flags.rs  main.rs  output.rs  skills.rs  test_runner.rs  upgrade.rs
cli/src/doctor/: launch.rs
cli/src/native/: actions.rs  adaptive.rs  browser.rs  cookies.rs  daemon.rs  e2e_tests.rs  element.rs  humanize.rs  interaction.rs  mod.rs  parity_tests.rs  relay.rs  snapshot.rs  state.rs  stealth.rs  stealth_scripts.js
cli/src/native/cdp/: chrome.rs  discovery.rs  lightpanda.rs  types.rs
cli/tests/: doctor_cli.rs
docker/: Dockerfile.build  docker-compose.yml
docs/: PRD-cli-web-collection-ergonomics.md  upstream-sync-2026-03-09.md
docs/blog/: agent-browser-stealth-attack-defense-playbook.zh-CN.md  cloudflare-turnstile-stability-principles.zh-CN.md  use-agent-browser-stealth-instead-of-agent-browser.zh-CN.md
extensions/: ab-connect.crx  updates.xml
scripts/: check-creepjs-headless.js  check-sannysoft-webdriver.js  check-stealth-regression.js  check-turnstile-testkey.ts  check-version-sync.js  clawhub-sync.sh  pack-extension.sh  postinstall.js  sync-upstream.sh  sync-version.js  verify-bundled-binaries.js  verify-native-version.js
src/: actions.test.ts  actions.ts  browser.test.ts  browser.ts  daemon.test.ts  daemon.ts  protocol.test.ts  protocol.ts  stealth.test.ts  stealth.ts  types.ts
(+41 files in other folders)
